<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tasty="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        tasty:showAsAction="ifRoom|collapseActionView"
        tasty:actionViewClass="android.support.v7.widget.SearchView"
        />

    <item
        android:id="@+id/data_switch"
        android:title="@string/global_data_switch"
        tasty:showAsAction="always"
        android:actionLayout="@layout/switch_layout"
        />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/ic_action_help"
        />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_action_about"
        />

</menu>